[package]
name = "ksp"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
description = """
A test suite for comparing different K-Shortest Path (KSP) algorithms.
"""


[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }


[features]
all = ["peek", "wikipedia", "yen"]

peek = []
wikipedia = []
yen = []


[workspace.package]
edition = "2021"
repository = "https://github.com/Lut99/k-shortest-paths"


[workspace]
members = [
    "ksp-bench"
]
