[package]
name = "ksp"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
description = """
A test suite for comparing different K-Shortest Path (KSP) algorithms.
"""


[dependencies]
arrayvec = "0.7"
serde = { version = "1.0", features = ["derive"], optional = true }

ksp-graph = { path = "./ksp-graph" }


[dev-dependencies]
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
ksp-graph = { path = "./ksp-graph", features = ["json"] }


[features]
all = ["peek", "wikipedia", "yen"]

peek = []
wikipedia = []
yen = []


[workspace.package]
edition = "2021"
repository = "https://github.com/Lut99/k-shortest-paths"


[workspace]
members = [
    "ksp-bench",
    "ksp-graph",
    "ksp-vis"
]
