[package]
name = "ksp-alg"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
description = "Defines implemented K-Shortest Path algorithms (and associates)."


[dependencies]
arrayvec = "0.7"
log = { version = "0.4", optional = true }
paste = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

ksp-graph = { path = "../ksp-graph" }


[dev-dependencies]
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
ksp-graph = { path = "../ksp-graph", features = ["json", "sndlib_xml"] }


[features]
default = []

log = ["dep:log"]
serde = ["dep:serde"]
