[package]
name = "ksp-bench"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
description = """
A test suite for comparing different K-Shortest Path (KSP) algorithms.

The test networks are from SNDLib (https://sndlib.put.poznan.pl/home.action)
"""


[[bin]]
name = "benchmark"
path = "src/main.rs"


[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = { version = "7.1" }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
log = "0.4"
quick-xml = { version = "0.36", features = ["serialize"] }

ksp-alg = { path = "../ksp-alg" }
ksp-graph = { path = "../ksp-graph", features = ["json", "sndlib_xml"] }


[features]
default = []
