[package]
name = "ksp-vis"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
description = """
Visualizes graphs in benchmarks.
"""


[[bin]]
name = "visualize"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
log = "0.4"

ksp-bench = { path = "../ksp-bench" }
