[package]
name = "ksp-vis"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
description = """
Visualizes graphs in benchmarks.
"""


[[bin]]
name = "visualize"
path = "src/main.rs"


[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
error-trace = { git = "https://github.com/Lut99/error-trace-rs" }
humanlog = { git = "https://github.com/Lut99/humanlog-rs" }
image = { version = "0.25", features = [] }
log = "0.4"

ksp = { path = "../" }
ksp-bench = { path = "../ksp-bench" }
